Refactored app structure and added new Recipes page
Reorganized app structure by moving existing 'Home' and 'Courses' pages into a dedicated 'pages' directory. Introduced a new 'Recipes' page with accompanying 'RecipesService' for data handling, and associated 'RecipeItem' and 'RecipeDetail' components. Also updated the main routing to include the new recipes routes. Included are unit tests and mock data for recipes. Finally, unnecessary dependencies were removed from pages and imported modules were consolidated into 'IonicModule'.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -60,15 +60,17 @@
     <ion-row>
       <ion-col size-md="6" offset-md="3">
         <ion-list>
-          <ion-item *ngFor="let expense of expensesList">
-            <ion-label>{{ expense.reason }}</ion-label>
-            <ion-note slot="end">{{ expense.amount }}</ion-note>
-          </ion-item>
+          @for (expense of expensesList; track expense.reason) {
+            <ion-item>
+              <ion-label>{{ expense.reason }}</ion-label>
+              <ion-note slot="end">{{ expense.amount }}</ion-note>
+            </ion-item>
+          }
         </ion-list>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size-md="6" offse-mdt="3">
+      <ion-col size-md="6" offset-md="3">
         <p class="ion-padding">Total: <span>{{ totalExpenses }}</span></p>
       </ion-col>
     </ion-row>
