--- a/src/app/pages/places/discover/discover.page.html
+++ b/src/app/pages/places/discover/discover.page.html
@@ -1,14 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>discover</ion-title>
+    <ion-title>discover places</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">discover</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  discover
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        @if (loadedPlaces.length > 0) {
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>{{ loadedPlaces[0].title }}</ion-card-title>
+              <ion-card-subtitle>{{ loadedPlaces[0].price | currency }}</ion-card-subtitle>
+            </ion-card-header>
+
+            <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
+            <ion-card-content>
+              <p>{{ loadedPlaces[0].description }}</p>
+            </ion-card-content>
+            <div>
+              <ion-button
+                fill="clear"
+                color="primary"
+                [routerLink]="['/', 'places', 'discover', loadedPlaces[0].id]"
+              >More</ion-button>
+            </div>
+          </ion-card>
+        }
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        <ion-list>
+          @for (place of loadedPlaces.slice(1); track place.id) {
+            <ion-item detail [routerLink]="['/', 'places', 'discover', place.id]">
+              <ion-thumbnail slot="start">
+                <ion-img [src]="place.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{ place.title }}</h2>
+                <p>{{ place.description }}</p>
+              </ion-label>
+            </ion-item>
+          }
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
