--- a/src/app/pages/places/offers/offers.page.html
+++ b/src/app/pages/places/offers/offers.page.html
@@ -1,14 +1,32 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title>My Offers</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button routerLink="/places/offers/new">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">offers</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  offers
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        <ion-list>
+          @for (place of loadedOffers; track place._id) {
+            <ion-item detail [routerLink]="['/', 'places', 'offers', place._id]">
+              <ion-thumbnail slot="start">
+                <ion-img [src]="place.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{ place.title }}</h2>
+                <p>{{ place.description }}</p>
+              </ion-label>
+            </ion-item>
+          }
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
