--- a/src/app/pages/places/discover/place-detail/place-detail.page.html
+++ b/src/app/pages/places/discover/place-detail/place-detail.page.html
@@ -3,16 +3,10 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/discover"></ion-back-button>
     </ion-buttons>
-    <ion-title>place-detail</ion-title>
+    <ion-title>{{ place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book</ion-button>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">place-detail</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  place-detail
 </ion-content>
