--- a/src/app/pages/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/pages/places/offers/edit-offer/edit-offer.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button [defaultHref]="'/places/offers/' + offer._id"></ion-back-button>
+    </ion-buttons>
     <ion-title>Edit offer</ion-title>
   </ion-toolbar>
 </ion-header>
