--- a/src/app/pages/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/pages/places/offers/offer-bookings/offer-bookings.page.html
@@ -3,10 +3,10 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/offers"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ place.title }}</ion-title>
+    <ion-title>{{ offer.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-button class="ion-margin" color="primary" [routerLink]="['/', 'places', 'offers', 'edit',  place._id]">Edit</ion-button>
+  <ion-button class="ion-margin" color="primary" [routerLink]="['/', 'places', 'offers', 'edit',  offer._id]">Edit</ion-button>
 </ion-content>
