--- a/src/app/pages/places/offers/offers.page.html
+++ b/src/app/pages/places/offers/offers.page.html
@@ -14,14 +14,14 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-list>
-          @for (place of loadedOffers; track place._id) {
-            <ion-item detail [routerLink]="['/', 'places', 'offers', place._id]">
+          @for (offer of loadedOffers; track offer._id) {
+            <ion-item detail [routerLink]="['/', 'places', 'offers', offer._id]">
               <ion-thumbnail slot="start">
-                <ion-img [src]="place.imageUrl"></ion-img>
+                <ion-img [src]="offer.imageUrl"></ion-img>
               </ion-thumbnail>
               <ion-label>
-                <h2>{{ place.title }}</h2>
-                <p>{{ place.description }}</p>
+                <h2>{{ offer.title }}</h2>
+                <p>{{ offer.description }}</p>
               </ion-label>
             </ion-item>
           }
