Implement navigation menu and enhance structure
Updated the application layout to include a navigation menu, improving the user experience. The structure changes also enhance the compatibility with MongoDB for the "Place" model while introducing an "Offer" model. All place-related data manipulations are now managed by a new "PlacesService". The offer pages were also updated to utilize the new service.

--- a/src/app/pages/places/offers/offers.page.html
+++ b/src/app/pages/places/offers/offers.page.html
@@ -1,5 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button>
+        <ion-menu-button></ion-menu-button>
+      </ion-button>
+    </ion-buttons>
     <ion-title>My Offers</ion-title>
     <ion-buttons slot="primary">
       <ion-button routerLink="/places/offers/new">
