Add padding to auth page content
Introduced CSS padding to the authorisation page content in the application. The padding improves user interface experience by providing space around the login button, ensuring the ordering of elements on the page is more visually appealing and user-friendly.

--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -4,6 +4,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-button color="primary" (click)="onLogin()">Login</ion-button>
 </ion-content>
