--- a/src/app/pages/places/offers/new-offer/new-offer.page.html
+++ b/src/app/pages/places/offers/new-offer/new-offer.page.html
@@ -7,10 +7,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">new-offer</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4" offset="2">Row 1 Col 1</ion-col>
+      <ion-col size="4">
+        Row 1 Col 2
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
