Add OfferItemComponent to display offers and refactor code
A new component has been added called OfferItemComponent for displaying offers which significantly restructures the presentation of offers in the app. Also, code in several files such as variables.scss and place-detail.page.ts has been refactored to adhere to coding standards and improve readability. The creation and usage of OfferItemComponent provides a more modular way to manage app components.

--- a/src/app/pages/places/offers/offers.page.html
+++ b/src/app/pages/places/offers/offers.page.html
@@ -21,15 +21,7 @@
         <ion-list>
           @for (offer of loadedOffers; track offer._id) {
             <ion-item-sliding>
-              <ion-item detail [routerLink]="['/', 'places', 'offers', offer._id]">
-                <ion-thumbnail slot="start">
-                  <ion-img [src]="offer.imageUrl"></ion-img>
-                </ion-thumbnail>
-                <ion-label>
-                  <h2>{{ offer.title }}</h2>
-                  <p>{{ offer.description }}</p>
-                </ion-label>
-              </ion-item>
+              <app-offer-item [offer]="offer"></app-offer-item>
               <ion-item-options>
                 <ion-item-option color="secondary" [routerLink]="['/', 'places', 'offers', offer._id]">
                   <ion-icon name="create" slot="icon-only"></ion-icon>
